2012-05-10  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-api.c: End bridging when closing ipmi
	session.  Do not support setting bridging targets when session not
	open.  Do not require setting both channel and rs_addr, pick
	appropriate default when only one is set.  Do not turn on bridging
	if user configures defaults.

	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Update comments.
	
2012-05-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h,
	libfreeipmi/api/ipmi-api.c (ipmi_ctx_set_target): New function.

	* libfreeipmi/api/: Support ability to run bridged IPMI commands
	without having to call _ipmb equivalent functions.

	* libfreeipmi/api/: Various code cleanup.
	
2012-05-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/templates/ipmi-oem-intel-node-manager-cmds-templates.h,
	libfreeipmi/cmds/ipmi-oem-intel-node-manager-cmds.c: Fix field
	name typo (Found by Werner Fischer).

2012-05-08  Thomas Renninger <trenn@suse.de>

	* etc/ipmidetectd.init: Fix start run levels.
	
2012-05-07  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr-cache/ipmi-sdr-cache-create.c (ipmi_sdr_cache_create):
	Fix error code return value.

2012-05-07  Albert Chu <chu11@llnl.gov>

	* common/toolevent/tool-event-common.c (event_output_event):
	Remove dead code.

	* sel-parse/ipmi-sel-parse-string.c (_output_event_data2_event_data3):
	Remove dead code.
	
2012-05-06  Albert Chu <chu11@llnl.gov>

	* Add Supermicro H8DGU-F support for ipmi-sel and interpret
	library.

	* Update docs for Supermicro H8DGU-F support.

2012-05-06  Diego Elio Pettenò <flameeyes@flameeyes.eu>

	* Add support for Supermicro H8DGU-F to ipmi-sensors.

2012-05-06  Albert Chu <chu11@llnl.gov>

	* ipmidetect/ipmidetect_.h, common/daemonutil/daemon-util.c:
	Remove unnecessary includes.  (Found by Diego Elio Pettenò)
	
2012-05-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c (ipmiconsole_argp_parse): Fix